--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.port=8080
 server.address=0.0.0.0
 
 app.upload.dir=./uploads
-google.calendar.client-id=238460305321-vi1rmtmv9pf1ndcs3cjooqqdvtvcq7nl.apps.googleusercontent.com
-google.calendar.client-secret=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
+google.calendar.client-id=********************
+google.calendar.client-secret=*******************
 google.calendar.redirect-uri=http://localhost:8080/oauth2/callback
 
 spring.servlet.multipart.max-file-size=10MB
